<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    style="@style/Title"
	    android:text="@string/app_name" />
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    style="@style/Title"
	    android:text="@string/linear_layout" />
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:scaleType="fitCenter"
		android:src="@drawable/dirtyjobs" />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal">
		<Button
			android:id="@+id/relative"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/Button"
			android:text="@string/relative" />
		<Button
			android:id="@+id/linear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/Button"
			android:text="@string/linear"
			android:enabled="false" />
	</LinearLayout>
</LinearLayout>